--- a/myapp/templates/myapp/post_list.html
+++ b/myapp/templates/myapp/post_list.html
@@ -2,23 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <title>Danh sach bai viet</title>
 </head>
 <body>
-<h1>Danh sach bai viet</h1>
-<a href="{% url 'create_post' %}">Tao bai viet</a>
-{% if page_obj %}
-<ul>
-  {% for post in page_obj %}
-    <li>
-      <a href="{% url 'post_detail' post.id %}">{{post.title}}</a> - {{post.created_at}}
-      <a href="{% url 'delete_post' post.id %}">Xoa bai viet</a>
-    </li>
-  {% endfor %}
-</ul>
-{% else %}
-  <p>Ban khong co bai viet nao</p>
-{% endif %}
+
+<div class="container">
+  <h1 class="my-4">Danh sach bai viet cua ban</h1>
+  <a href="{% url 'create_post' %}">Tao bai viet</a>
+  {% if page_obj %}
+  <ul class="list-group">
+    {% for post in page_obj %}
+      <li class="list-group-item">
+        <a href="{% url 'post_detail' post.id %}">{{post.title}}</a> - {{post.created_at}}
+        <a href="{% url 'delete_post' post.id %}" class="btn btn-sm btn-danger ms-2">Xoa bai viet</a>
+      </li>
+    {% endfor %}
+  </ul>
+  {% else %}
+    <p>Ban khong co bai viet nao</p>
+  {% endif %}
+</div>
 
 <div>
   <p>
